fix z-index

--- a/src/app.scss
+++ b/src/app.scss
@@ -24,6 +24,7 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
+      z-index: 0;
       
 
       // page gutter
